changes to dashboard for fixes